@@ -1,3 +1,4 @@
+06/04/2015 - 1.7   - Fenix      - fixed @nextmap being unreliable
 03/11/2014 - 1.6.1 - Fenix      - updated plugin to use a default rate vale of 2mins is not specified in the
                                   plugin configuration file (previously plugin was not loading at all)
 31/08/2014 - 1.6   - Fenix      - syntax cleanup
